--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "topic-backend",
   "version": "1.0.0",
   "dependencies": {
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "showdown": "^2.0.3"
   },
   "scripts": {
     "start": "nodemon ./src/app.ts"
